Bug 377773 - Wrong output for matrices
Summary: Wrong output for matrices
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: julia-backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Lakhtanov
URL:
Keywords:
: 377774 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-03-18 14:18 UTC by Alexander Semke
Modified: 2018-06-03 08:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2017-03-18 14:18:33 UTC
matrices like mat=[1 2 3;4 5 6] are interpreted and shown in the output of the command entry as Array{Int64, 2}[1, 4, 2, 5, 3, 6] and not as 2x3 Array{Int64,2}.
 Similar for matrices created via zeros and ones, e.g. zeros(2,2), ones(2,2), etc.
Comment 1 Ivan Lakhtanov 2017-04-02 20:30:59 UTC
*** Bug 377774 has been marked as a duplicate of this bug. ***
Comment 2 Ivan Lakhtanov 2017-04-02 20:44:37 UTC
I've done fast fix. Were using jl_static_show to display resulting values, now using 'display' function as native REPL do.

Patch: https://phabricator.kde.org/D5283
Comment 3 Nikita Sirgienko 2018-06-01 16:01:28 UTC
Git commit 1bc5d71f3cf4e1c200989cdb021cab87ecf1ca50 by Nikita Sirgienko.
Committed on 01/06/2018 at 16:00.
Pushed by sirgienko into branch 'master'.

Fix julia output: change display function from jl_static_show to 'display'
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13256

M  +3    -1    src/backends/julia/juliaserver/juliaserver.cpp

https://commits.kde.org/cantor/1bc5d71f3cf4e1c200989cdb021cab87ecf1ca50
Comment 4 Alexander Semke 2018-06-03 08:28:39 UTC
Git commit 26a0e4106a0d4633f9590bd182e44c3d5fb2171d by Alexander Semke, on behalf of Nikita Sirgienko.
Committed on 03/06/2018 at 08:28.
Pushed by asemke into branch 'Applications/18.04'.

Fix julia output: change display function from jl_static_show to 'display'
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13256

M  +3    -1    src/backends/julia/juliaserver/juliaserver.cpp

https://commits.kde.org/cantor/26a0e4106a0d4633f9590bd182e44c3d5fb2171d