Fix julia output: change display function from jl_static_show to 'display'

BUG: 377773
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13256